force-app/main/default/objects/Technical_Skill__c/Technical_Skill__c.object-meta.xml
<CustomObject>
    <description>Technical Skills object</description>
    <label>Technical Skill</label>
    <nameField>
        <label>Technical Skill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Technical Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>