force-app/main/default/objects/Technical_Skill__c/fields/Resume__c.field-meta.xml
<CustomField>
    <fullName>Resume__c</fullName>
    <description>Master lookup to the Resume</description>
    <label>Resume</label>
    <referenceTo>Resume__c</referenceTo>
    <relationshipLabel>Technical Skills</relationshipLabel>
    <relationshipName>Technical_Skills</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>