force-app/main/default/objects/Technical_Skill__c/fields/Skills_List__c.field-meta.xml
<CustomField>
    <fullName>Skills_List__c</fullName>
    <description>List of skills.</description>
    <inlineHelpText>Enter in the skills.</inlineHelpText>
    <label>Skills List</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>